--- a/css/main.scss
+++ b/css/main.scss
@@ -21,14 +21,25 @@ body {
 
     .white {
       fill: #fff;
+      transition: fill 0.4s ease;
     }
 
     path:hover {
       cursor: pointer;
     }
+  }
 
-    path:active {
-      fill: rgb(122, 204, 44);
+  .keydown {
+    animation: keydown 0.3s ease-in-out forwards;
+  }
+
+  @keyframes keydown {
+    0% {
+      fill: #fff;
+    }
+    40%,
+    100% {
+      fill: rgb(104, 231, 82);
     }
   }
 }
